--- a/DiffbotCalendar/TODO.txt
+++ b/DiffbotCalendar/TODO.txt
@@ -1,5 +1,3 @@
 TODO:
 Make each class's color correspond to the color that it's assigned in the website
-
-Athena Blank Calendar Key:
-tvkrobbecdp0euis8ja49cup9s@group.calendar.google.com
+Make the CSS stylesheet of the calendar correspond to the stylesheet of the website <- for stuart when he implements it
